--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -25,11 +25,13 @@ If you want to use Maven, you need to do this:
    * download the [http://cxf-protobuf.googlecode.com/files/cxf-protobuf-0.3-project.zip cxf-protobuf project] and unzip it
    * go to its top level directory and build and install it in your local repo: 
       * `mvn install`
-   * download the project source of an example
+   * download the project source of an example (e.g. the [http://cxf-protobuf.googlecode.com/files/addressbook-example-0.3-project.zip addressbook-example]
    * build it:
       * `mvn jar:jar`
    * jar is generated in the target/ directory
    * run the `com.google.code.cxf.protobuf.example.addressbook.Server` class for the server and the `com.google.code.cxf.protobuf.example.addressbook.Client` class for the client
+
+You can also import the example projects in Eclipse if you want (you will need the [http://m2eclipse.codehaus.org/ Eclipse Maven plugin].
 
 === Example 1: !AddressBook service ===
 
